# stochastic-transit-router

./: .editorconfig  .gitattributes  .gitignore  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  FIXES_APPLIED.md  LICENSE  Makefile  README.md  SECURITY.md  hbd.html  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  data_issue.md  feature_request.md
.github/workflows/: benchmark-sanity.yml  ci.yml  docs-build.yml  integration-tests.yml  lint.yml  release.yml  type-check.yml  unit-tests.yml
benchmarks/: README.md  pytest.ini
benchmarks/algorithms/: __init__.py  bench_astar.py  bench_cvar.py  bench_dijkstra.py  bench_reliability.py  bench_stochastic.py  bench_time_dependent.py  bench_yens.py
benchmarks/configs/: large.yaml  medium.yaml  small.yaml
configs/: default.yaml  development.yaml  nyc.yaml  production.yaml  testing.yaml
configs/api/: cors.yaml  rate_limits.yaml
configs/benchmarks/: astar.yaml  cvar.yaml  dijkstra.yaml  reliability.yaml  robust.yaml  stochastic.yaml  time_dependent.yaml  yens.yaml
configs/feeds/: 511ny.yaml  mta_gtfs.yaml  mta_realtime.yaml  osm.yaml  tlc.yaml
configs/graph/: construction.yaml  update_policy.yaml  walking_edges.yaml
configs/logging/: development.yaml  production.yaml
configs/risk/: alpha_levels.yaml  lambda_values.yaml
configs/stats/: bootstrap.yaml  estimation.yaml  segmentation.yaml
data/: README.md
data/cache/: README.md
data/exports/: README.md
data/manifests/: README.md
data/processed/: README.md
data/raw/: README.md
deployment/: README.md  settings.ini
deployment/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
deployment/scripts/: deploy.sh  health_check.sh
docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh
docs/: index.md
docs/adr/: 0001_why_nyc_first.md  0002_graph_representation.md  0003_data_model.md  0004_stochastic_approximation.md  0005_risk_metric_choice.md  0006_service_architecture.md  0007_storage_approach.md  0008_benchmark_protocol.md  0009_algorithm_selection.md  0010_realtime_feed_strategy.md  0011_walking_edge_model.md  0012_covariance_approximation.md  0013_online_update_policy.md  0014_city_generalization.md  0015_license_choice.md  README.md
docs/api/: ingest_openapi.yaml  internal_openapi.yaml  openapi.yaml
docs/architecture/: data_flow.md  module_boundaries.md  overview.md  runtime_modes.md
docs/contributing/: code_style.md  development_setup.md
docs/datasets/: gtfs.md  gtfs_realtime.md  nyc_tlc.md  osm_overpass.md
docs/evaluation/: benchmark_protocol.md  evaluation_plan.md
docs/math/: estimation.md  graph_model.md  risk_metrics.md  stochastic_routing.md
docs/operations/: data_refresh.md  reproducibility.md
experiments/: README.md
experiments/metadata/: experiment_index.yaml
experiments/nyc/: README.md
notebooks/: 01_gtfs_feed_exploration.ipynb  02_gtfs_graph_construction.ipynb  03_tlc_data_analysis.ipynb  04_osm_walking_edges.ipynb  05_routing_algorithm_comparison.ipynb  06_stochastic_distribution_fitting.ipynb  07_reliability_analysis.ipynb  08_realtime_update_inspection.ipynb  09_risk_metric_comparison.ipynb  10_benchmark_results_analysis.ipynb  11_covariance_structure.ipynb  12_calibration_analysis.ipynb  13_disruption_case_study.ipynb  14_time_of_day_sensitivity.ipynb  15_reproducibility_verification.ipynb  README.md  jupyter_settings.toml
schemas/: README.md
schemas/api/: reliability_request.json  reliability_response.json  route_request.json  route_response.json  topk_request.json  topk_response.json
schemas/contracts/: gtfs_ingest_contract.yaml  osm_ingest_contract.yaml  realtime_ingest_contract.yaml  tlc_ingest_contract.yaml
schemas/extensions/: benchmark_result.json  calibration_report.json  city_config.json  disruption_event.json  edge_observation.json  experiment_metadata.json  feed_manifest.json  freshness_snapshot.json  route_candidate.json  walk_connector.json
schemas/graph/: distribution.json  edge.json  graph_metadata.json  node.json
schemas/gtfs/: agency.json  calendar.json  calendar_dates.json  feed_info.json  frequencies.json  pathways.json  routes.json  shapes.json  stop_times.json  stops.json  transfers.json  trips.json
schemas/gtfs_realtime/: service_alert.json  trip_update.json  vehicle_position.json
schemas/osm/: overpass_response.json  pedestrian_way.json
schemas/protobuf/: benchmark_service.proto  experiment_service.proto  feed_service.proto  route_service.proto
schemas/tlc/: fhv.json  green_taxi.json  yellow_taxi.json  zone_lookup.json
scripts/: README.md  build_graph_nyc.py  download_official_data.py  prepare_data_for_training.py
src/: __init__.py
src/algorithms/: __init__.py  astar.py  base.py  bidirectional_dijkstra.py  cvar_router.py  dijkstra.py  dynamic_rerouter.py  errors.py  heuristics.py  pareto_filter.py  path_utils.py  priority_queue.py  reliability_router.py  robust_router.py  stochastic_shortest_path.py  time_dependent.py  yens.py
src/api/: __init__.py  app.py  deps.py  errors.py  schemas.py
src/benchmarks/: __init__.py  environment.py  memory_tracker.py  profiler.py  report_generator.py  result_store.py  runner.py
src/cli/: __init__.py  main.py  output.py  progress.py
src/config/: __init__.py  city_registry.py  loader.py  settings.py  validator.py
src/evaluation/: __init__.py  comparator.py  experiment_runner.py  ground_truth.py  metrics.py  perturbation.py  reporter.py  result_store.py
src/feeds/: __init__.py  base_feed.py  feed_metadata.py  feed_registry.py  freshness.py  http_client.py  refresh_strategy.py
src/graph/: __init__.py  builder.py  contraction.py  core.py  dynamic_updater.py  edge.py  errors.py  loader.py  node.py  partitioner.py  pruner.py  serializer.py  stats.py  temporal_graph.py  time_expanded.py  validator.py
src/gtfs/: __init__.py  calendar_service.py  errors.py  (+10 more)
stochastic_transit_router/: __init__.py
tests/: conftest.py  pytest.ini  test_algorithms.py  test_api.py  test_ingest.py
(+539 files in other folders)
